styled scrollbars and fixed workout components

--- a/src/components/workout/styles.scss
+++ b/src/components/workout/styles.scss
@@ -1,12 +1,14 @@
 .workout--container {
   border: 1px solid lightblue;
+  height: 100%;
   border-radius: 4px;
-  padding: 0 10px;
+  padding: 4px 10px;
   margin: 0 5px;
   
   &__title-container {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
   }
 
   h2 {
@@ -24,7 +26,6 @@
   &__icons {
     display: flex;
     flex-direction: row;
-    width: 100%;
     margin-left: 20px;
 
     img {
@@ -35,26 +36,20 @@
 
   }
 
-  &__collapsed {
-    animation-name: collapse;
-    animation-duration: .5s;
-    animation-fill-mode: forwards;
+  ::-webkit-scrollbar {
+    border-radius: 10px;
+    width: 10px;
   }
 
-  &__expanded {
-    animation-name: expand;
-    animation-duration: .5s;
-    animation-fill-mode: forwards;
+  ::-webkit-scrollbar-track {
+    background-color: white;
+    margin-top: 43px;
   }
 
-}
+  ::-webkit-scrollbar-thumb {
+    background-color: white;
+    border-radius: 10px;
+    width: 10px;
+  }
 
-@keyframes collapse {
-  from { height: 100px; }
-  to { height: 0; }
-}
-
-@keyframes expand {
-  from { height: 0; }
-  to { height: 100px; }
 }
