--- a/src/styles.scss
+++ b/src/styles.scss
@@ -25,6 +25,25 @@
 
 }
 
-::-webkit-scrollbar {
-  display: none; 
+body {
+  ::-webkit-scrollbar {
+    border-radius: 10px;
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: white;
+    margin-top: 43px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: lightblue;
+    border-radius: 10px;
+    width: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: rgb(86, 180, 211);
+  }
+
 }
